<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titan_one"
        android:text="@string/entering_Name"
       android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/string2"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:text="@string/string_ent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_text"
        android:layout_marginTop="35dp"
        android:layout_below="@id/string2"
        android:paddingLeft="12dp"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="26dp"
        android:hint="@string/emeil"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_text2"
        android:layout_marginTop="25dp"
        android:layout_below="@id/edit_text"
        android:paddingVertical="13dp"
        android:paddingLeft="16dp"
        android:layout_marginHorizontal="26dp"
        android:hint="@string/password"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton

        android:backgroundTint="@color/orange"
        android:id="@+id/btn"
        app:cornerRadius="12dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/edit_text2"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="26dp"
        android:text="@string/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/forgotPass"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView

        android:id="@+id/enter"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button

        android:id="@+id/helper"
        android:layout_marginRight="40dp"
        android:layout_alignRight="@id/btn"
        android:layout_below="@id/btn"
        android:textStyle="bold"
        android:text="."
        android:textColor="@color/grey"
        android:textSize="10sp"
        android:alpha="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/help"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:layout_marginTop="14dp"
        android:layout_marginRight="60dp"
        android:layout_alignRight="@id/btn"
        android:layout_below="@id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        android:backgroundTint="@color/orange"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        android:layout_margin="5dp"
        android:text="Назад"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>